fix alignment for inline code boxes

--- a/src/main/_sass/_style.scss
+++ b/src/main/_sass/_style.scss
@@ -743,7 +743,7 @@ h5 > code,
   color: #000;
   max-width: 100%;
   overflow-x: auto;
-  vertical-align: middle;
+  vertical-align: sub;
   @include border-radius(3px);
 }
 
